# TheProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Sandbox/: CMakeCache.txt  CMakeLists.txt
Sandbox/src/: main.cpp
TheProject/: CMakeLists.txt
TheProject/src/: TheProject.h  test.cpp  test.h  tppch.h
TheProject/src/Platform/Windows/: win_window.cpp  win_window.h
TheProject/src/TheProject/: application.cpp  application.h  core.h  entry_point.h  log.cpp  log.h  window.h
TheProject/src/TheProject/Events/: application_event.h  event.h  key_event.h  mouse_event.h
